Modification complète du projet

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -2,7 +2,7 @@
   "@@locale": "ar",
   "appName": "كيندي",
   "appSubtitle": "تدبير وتتبع الأطفال",
-  "welcome": "مرحبا",
+  "welcome": "مرحباً",
   "email": "البريد الإلكتروني",
   "emailHint": "email@example.com",
   "password": "كلمة المرور",
@@ -24,5 +24,23 @@
   "fillAllFields": "يرجى ملء جميع الحقول",
   "accountCreated": "تم إنشاء الحساب بنجاح",
   "emailAlreadyUsed": "هذا البريد الإلكتروني مستخدم بالفعل",
-  "passwordsNotMatch": "كلمتا المرور غير متطابقتين"
+  "passwordsNotMatch": "كلمتا المرور غير متطابقتين",
+  "emailNotVerified": "البريد الإلكتروني غير مؤكد — تحقق من صندوق الوارد",
+  "language": "اللغة",
+  "settings": "الإعدادات",
+  "logout": "تسجيل الخروج",
+  "profile": "الملف الشخصي",
+  "myClasses": "فصولي",
+  "students": "التلاميذ",
+  "observations": "الملاحظات",
+  "newObservation": "ملاحظة جديدة",
+  "save": "حفظ",
+  "cancel": "إلغاء",
+  "delete": "حذف",
+  "edit": "تعديل",
+  "confirmDelete": "تأكيد الحذف",
+  "yes": "نعم",
+  "no": "لا",
+  "search": "بحث",
+  "noData": "لا توجد بيانات"
 }
