--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,5 +24,23 @@
   "fillAllFields": "Please fill in all fields",
   "accountCreated": "Account created successfully",
   "emailAlreadyUsed": "This email address is already in use",
-  "passwordsNotMatch": "Passwords do not match"
+  "passwordsNotMatch": "Passwords do not match",
+  "emailNotVerified": "Email not confirmed — check your inbox",
+  "language": "Language",
+  "settings": "Settings",
+  "logout": "Logout",
+  "profile": "Profile",
+  "myClasses": "My classes",
+  "students": "Students",
+  "observations": "Observations",
+  "newObservation": "New observation",
+  "save": "Save",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "edit": "Edit",
+  "confirmDelete": "Confirm deletion",
+  "yes": "Yes",
+  "no": "No",
+  "search": "Search",
+  "noData": "No data"
 }
