--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -9,7 +9,7 @@
   "passwordHint": "••••••••",
   "forgotPassword": "Mot de passe oublié ?",
   "signIn": "Se connecter",
-  "signUp": "S’inscrire",
+  "signUp": "S'inscrire",
   "or": "ou",
   "noAccount": "Vous n'avez pas de compte ?",
   "createAccount": "Créer un compte",
@@ -24,5 +24,23 @@
   "fillAllFields": "Veuillez remplir tous les champs",
   "accountCreated": "Compte créé avec succès",
   "emailAlreadyUsed": "Cette adresse e-mail est déjà utilisée",
-  "passwordsNotMatch": "Les mots de passe ne correspondent pas"
+  "passwordsNotMatch": "Les mots de passe ne correspondent pas",
+  "emailNotVerified": "Email non confirmé — vérifiez votre boîte mail",
+  "language": "Langue",
+  "settings": "Paramètres",
+  "logout": "Déconnexion",
+  "profile": "Profil",
+  "myClasses": "Mes classes",
+  "students": "Élèves",
+  "observations": "Observations",
+  "newObservation": "Nouvelle observation",
+  "save": "Enregistrer",
+  "cancel": "Annuler",
+  "delete": "Supprimer",
+  "edit": "Modifier",
+  "confirmDelete": "Confirmer la suppression",
+  "yes": "Oui",
+  "no": "Non",
+  "search": "Rechercher",
+  "noData": "Aucune donnée"
 }
