Modification complet de projet

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -42,5 +42,79 @@
   "yes": "نعم",
   "no": "لا",
   "search": "بحث",
-  "noData": "لا توجد بيانات"
+  "noData": "لا توجد بيانات",
+  "home": "الرئيسية",
+  "myStudents": "تلاميذي",
+  "addClass": "إضافة فصل",
+  "addStudent": "إضافة تلميذ",
+  "className": "اسم الفصل",
+  "level": "المستوى",
+  "academicYear": "السنة الدراسية",
+  "noClasses": "لا توجد فصول.",
+  "noClassesHint": "اضغط + لإضافة فصل.",
+  "noStudents": "لا يوجد تلاميذ.",
+  "noStudentsHint": "اضغط + لإضافة تلميذ.",
+  "noArchivedStudents": "لا يوجد تلاميذ مؤرشفون.",
+  "classAdded": "تمت إضافة الفصل ✅",
+  "deleteClass": "حذف الفصل",
+  "deleteStudent": "حذف التلميذ",
+  "deleteClassConfirm": "حذف هذا الفصل؟",
+  "deleteStudentConfirm": "حذف نهائي؟",
+  "archive": "أرشفة",
+  "unarchive": "إلغاء الأرشفة",
+  "archived": "مؤرشف",
+  "active": "نشط",
+  "synchronizing": "جارٍ المزامنة...",
+  "error": "خطأ",
+  "dateOfBirth": "تاريخ الميلاد",
+  "dateOfBirthRequired": "تاريخ الميلاد مطلوب",
+  "gender": "الجنس",
+  "boy": "ذكر",
+  "girl": "أنثى",
+  "riskLevel": "مستوى الخطر",
+  "riskGreen": "أخضر",
+  "riskOrange": "برتقالي",
+  "riskRed": "أحمر",
+  "riskUndefined": "غير محدد",
+  "childProfile": "ملف الطفل",
+  "addObservation": "إضافة ملاحظة",
+  "noObservations": "لا توجد ملاحظات.",
+  "lastRisk": "آخر مستوى",
+  "notes": "ملاحظات",
+  "context": "السياق",
+  "freePlay": "لعب حر",
+  "activity": "نشاط",
+  "grouping": "تجميع",
+  "never": "أبداً",
+  "sometimes": "أحياناً",
+  "often": "كثيراً",
+  "observationSaved": "تم حفظ الملاحظة ✅",
+  "answerAllQuestions": "يرجى الإجابة على جميع الأسئلة.",
+  "addNote": "أضف ملاحظة...",
+  "add": "إضافة",
+  "contextOptional": "السياق (اختياري)",
+  "notesOptional": "ملاحظات (اختياري)",
+  "administration": "الإدارة",
+  "allTeachers": "جميع الأساتذة",
+  "allStudents": "جميع التلاميذ",
+  "allTeachersSubtitle": "عرض جميع الأساتذة مع مدارسهم",
+  "allStudentsSubtitle": "عرض جميع التلاميذ من جميع الفصول",
+  "addTeacher": "إضافة أستاذ",
+  "archiveTeacher": "أرشفة أستاذ",
+  "noTeachers": "لا يوجد أساتذة.",
+  "yearsExperience": "سنوات الخبرة",
+  "activate": "تفعيل",
+  "deactivate": "تعطيل",
+  "offlineMode": "وضع غير متصل — بيانات محلية فقط",
+  "verifyEmail": "تحقق من بريدي الإلكتروني",
+  "emailSentTo": "تم إرسال بريد إلكتروني إلى",
+  "confirmEmailSteps": "افتح بريدك وانقر على رابط التأكيد",
+  "iConfirmedEmail": "لقد أكدت بريدي الإلكتروني ✅",
+  "resendEmail": "إعادة إرسال البريد",
+  "emailResent": "تمت إعادة الإرسال ✅",
+  "modifyInfo": "← تعديل المعلومات",
+  "confirmEmailTitle": "تأكيد بريدك الإلكتروني",
+  "roleTeacher": "أستاذ",
+  "roleAdmin": "مدير",
+  "roleSuperAdmin": "مدير عام"
 }
