--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -42,5 +42,79 @@
   "yes": "Yes",
   "no": "No",
   "search": "Search",
-  "noData": "No data"
+  "noData": "No data",
+  "home": "Home",
+  "myStudents": "My students",
+  "addClass": "Add a class",
+  "addStudent": "Add a student",
+  "className": "Class name",
+  "level": "Level",
+  "academicYear": "Academic year",
+  "noClasses": "No classes found.",
+  "noClassesHint": "Press + to add one.",
+  "noStudents": "No students found.",
+  "noStudentsHint": "Press + to add one.",
+  "noArchivedStudents": "No archived students.",
+  "classAdded": "Class added ✅",
+  "deleteClass": "Delete class",
+  "deleteStudent": "Delete student",
+  "deleteClassConfirm": "Delete this class?",
+  "deleteStudentConfirm": "Delete permanently?",
+  "archive": "Archive",
+  "unarchive": "Unarchive",
+  "archived": "Archived",
+  "active": "Active",
+  "synchronizing": "Synchronizing...",
+  "error": "Error",
+  "dateOfBirth": "Date of birth",
+  "dateOfBirthRequired": "Date of birth required",
+  "gender": "Gender",
+  "boy": "Boy",
+  "girl": "Girl",
+  "riskLevel": "Risk level",
+  "riskGreen": "Green",
+  "riskOrange": "Orange",
+  "riskRed": "Red",
+  "riskUndefined": "Undefined",
+  "childProfile": "Child profile",
+  "addObservation": "Add observation",
+  "noObservations": "No observations.",
+  "lastRisk": "Last level",
+  "notes": "Notes",
+  "context": "Context",
+  "freePlay": "Free play",
+  "activity": "Activity",
+  "grouping": "Grouping",
+  "never": "Never",
+  "sometimes": "Sometimes",
+  "often": "Often",
+  "observationSaved": "Observation saved ✅",
+  "answerAllQuestions": "Please answer all questions.",
+  "addNote": "Add a note...",
+  "add": "Add",
+  "contextOptional": "Context (optional)",
+  "notesOptional": "Notes (optional)",
+  "administration": "Administration",
+  "allTeachers": "All Teachers",
+  "allStudents": "All Students",
+  "allTeachersSubtitle": "View all teachers with their schools",
+  "allStudentsSubtitle": "Display all students from all classes",
+  "addTeacher": "Add teacher",
+  "archiveTeacher": "Archive teacher",
+  "noTeachers": "No teachers found.",
+  "yearsExperience": "Years of experience",
+  "activate": "Activate",
+  "deactivate": "Deactivate",
+  "offlineMode": "Offline mode — local data only",
+  "verifyEmail": "Verify my email",
+  "emailSentTo": "An email was sent to",
+  "confirmEmailSteps": "Open your inbox and click the confirmation link",
+  "iConfirmedEmail": "I confirmed my email ✅",
+  "resendEmail": "Resend email",
+  "emailResent": "Email resent ✅",
+  "modifyInfo": "← Modify my information",
+  "confirmEmailTitle": "Confirm your email",
+  "roleTeacher": "Teacher",
+  "roleAdmin": "Administrator",
+  "roleSuperAdmin": "Super Admin"
 }
