--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -42,5 +42,79 @@
   "yes": "Oui",
   "no": "Non",
   "search": "Rechercher",
-  "noData": "Aucune donnée"
+  "noData": "Aucune donnée",
+  "home": "Accueil",
+  "myStudents": "Mes élèves",
+  "addClass": "Ajouter une classe",
+  "addStudent": "Ajouter un élève",
+  "className": "Nom de la classe",
+  "level": "Niveau",
+  "academicYear": "Année scolaire",
+  "noClasses": "Aucune classe trouvée.",
+  "noClassesHint": "Appuyez sur + pour en ajouter une.",
+  "noStudents": "Aucun élève trouvé.",
+  "noStudentsHint": "Appuyez sur + pour en ajouter un.",
+  "noArchivedStudents": "Aucun élève archivé.",
+  "classAdded": "Classe ajoutée ✅",
+  "deleteClass": "Supprimer la classe",
+  "deleteStudent": "Supprimer l'élève",
+  "deleteClassConfirm": "Supprimer cette classe ?",
+  "deleteStudentConfirm": "Supprimer définitivement ?",
+  "archive": "Archiver",
+  "unarchive": "Désarchiver",
+  "archived": "Archivés",
+  "active": "Actifs",
+  "synchronizing": "Synchronisation...",
+  "error": "Erreur",
+  "dateOfBirth": "Date de naissance",
+  "dateOfBirthRequired": "Date de naissance obligatoire",
+  "gender": "Genre",
+  "boy": "Garçon",
+  "girl": "Fille",
+  "riskLevel": "Niveau de risque",
+  "riskGreen": "Vert",
+  "riskOrange": "Orange",
+  "riskRed": "Rouge",
+  "riskUndefined": "Non défini",
+  "childProfile": "Profil enfant",
+  "addObservation": "Ajouter une observation",
+  "noObservations": "Aucune observation.",
+  "lastRisk": "Dernier niveau",
+  "notes": "Notes",
+  "context": "Contexte",
+  "freePlay": "Jeu libre",
+  "activity": "Activité",
+  "grouping": "Regroupement",
+  "never": "Jamais",
+  "sometimes": "Parfois",
+  "often": "Souvent",
+  "observationSaved": "Observation enregistrée ✅",
+  "answerAllQuestions": "Veuillez répondre à toutes les questions.",
+  "addNote": "Ajouter une note...",
+  "add": "Ajouter",
+  "contextOptional": "Contexte (optionnel)",
+  "notesOptional": "Notes (optionnel)",
+  "administration": "Administration",
+  "allTeachers": "Tous les Professeurs",
+  "allStudents": "Tous les Élèves",
+  "allTeachersSubtitle": "Voir la liste de tous les professeurs avec leurs écoles",
+  "allStudentsSubtitle": "Afficher tous les élèves de toutes les classes",
+  "addTeacher": "Ajouter professeur",
+  "archiveTeacher": "Archiver professeur",
+  "noTeachers": "Aucun professeur trouvé.",
+  "yearsExperience": "Années d'expérience",
+  "activate": "Activer",
+  "deactivate": "Désactiver",
+  "offlineMode": "Mode hors ligne — données locales uniquement",
+  "verifyEmail": "Vérifier mon email",
+  "emailSentTo": "Un email a été envoyé à",
+  "confirmEmailSteps": "Ouvrez votre boîte mail et cliquez sur le lien de confirmation",
+  "iConfirmedEmail": "J'ai confirmé mon email ✅",
+  "resendEmail": "Renvoyer l'email",
+  "emailResent": "Email renvoyé ✅",
+  "modifyInfo": "← Modifier mes informations",
+  "confirmEmailTitle": "Confirmez votre email",
+  "roleTeacher": "Professeur",
+  "roleAdmin": "Administrateur",
+  "roleSuperAdmin": "Super Admin"
 }
